--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "cra-template": "1.0.3",
+    "firebase": "^7.17.2",
     "react": "^16.13.1",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-with-firebase-auth": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
